--- a/README
+++ b/README
@@ -1,3 +1,9 @@
-## Unfoldingmaps for Coursera Java OOP course 
+# Unfoldingmaps application for visualization of earthquake occurences
 
-- 	
+
+# Libraries
+- UnfoldingMaps
+- Processing
+
+# Data
+- Earthquake live feed from https://earthquake.usgs.gov/
